--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "deploy": "gh-pages -d build"
     },
     "devDependencies": {
+        "eslint": "^4.8.0",
+        "eslint-plugin-react": "^7.4.0",
         "gh-pages": "^1.0.0"
     }
 }
